--- a/MoneySplitter.Win10/Styles/Icons.xaml
+++ b/MoneySplitter.Win10/Styles/Icons.xaml
@@ -14,4 +14,5 @@
     <x:String x:Key="DontForgetIcon">&#xEC92;</x:String>
     <x:String x:Key="StatisticsIcon">&#xE9D9;</x:String>
     <x:String x:Key="NotesIcon">&#xE946;</x:String>
+    <x:String x:Key="RemoveNoteIcon">&#xE947;</x:String>
 </ResourceDictionary>
