--- a/MoneySplitter.Win10/Styles/Views/HomeViewStyle.xaml
+++ b/MoneySplitter.Win10/Styles/Views/HomeViewStyle.xaml
@@ -157,4 +157,33 @@
     <Style TargetType="Grid" x:Key="NoteGridSyle">
         <Setter Property="Height" Value="76"/>
     </Style>
+    <Style TargetType="StackPanel" x:Key="NoteStackPanelSyle">
+        <Setter Property="Margin" Value="8,0,12,0"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+    </Style>
+    <Style TargetType="TextBlock" x:Key="NoteTitleTextStyle">
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="Foreground" Value="{StaticResource DarkColorBrush}"/>
+    </Style>
+    <Style TargetType="TextBlock" x:Key="NoteTextStyle">
+        <Setter Property="FontSize" Value="14"/>
+        <Setter Property="Foreground" Value="{StaticResource GrayColorBrush}"/>
+        <Setter Property="TextWrapping" Value="Wrap"/>
+        <Setter Property="MaxLines" Value="2"/>
+    </Style>
+    <Style TargetType="FontIcon" x:Key="RemoveFontIconStyle">
+        <Setter Property="Glyph" Value="{StaticResource RemoveNoteIcon}"/>
+        <Setter Property="Foreground" Value="{StaticResource GrayColorBrush}"/>
+    </Style>
+    <Style TargetType="TextBlock" x:Key="RemoveTextStyle">
+        <Setter Property="FontSize" Value="14"/>
+        <Setter Property="Foreground" Value="{StaticResource DarkColorBrush}"/>
+        <Setter Property="Margin" Value="12,0,0,0"/>
+    </Style>
+    <Style TargetType="Border" x:Key="NoteBorderStyle">
+        <Setter Property="VerticalAlignment" Value="Stretch"/>
+        <Setter Property="HorizontalAlignment" Value="Stretch"/>
+        <Setter Property="BorderThickness" Value="0,0,0,1"/>
+        <Setter Property="BorderBrush" Value="{StaticResource LightGrayColorBrush}"/> 
+    </Style>
 </ResourceDictionary>
