--- a/MoneySplitter.Win10/CustomControls/TransactionStatusControl.xaml
+++ b/MoneySplitter.Win10/CustomControls/TransactionStatusControl.xaml
@@ -23,6 +23,7 @@
             <Setter Property="VerticalAlignment" Value="Center"/>
             <Setter Property="HorizontalAlignment" Value="Left"/>
             <Setter Property="Foreground" Value="White"/>
+            <Setter Property="Margin" Value="0,3,0,0"/>
         </Style>
     </UserControl.Resources>
     <Grid>
