--- a/MoneySplitter.Win10/Styles/GlobalStyles.xaml
+++ b/MoneySplitter.Win10/Styles/GlobalStyles.xaml
@@ -7,15 +7,12 @@
 
     <Style TargetType="Button" x:Key="DefaultButtonStyle">
         <Setter Property="Background" Value="Transparent" />
-        <Setter Property="Foreground" Value="{ThemeResource SystemControlForegroundBaseHighBrush}"/>
         <Setter Property="BorderThickness" Value="1" />
         <Setter Property="Padding" Value="12,0,12,0"/>
         <Setter Property="HorizontalAlignment" Value="Left" />
         <Setter Property="BorderBrush" Value="{StaticResource Border}"/>
         <Setter Property="VerticalAlignment" Value="Top" />
-        <Setter Property="FontWeight" Value="Normal" />
         <Setter Property="Height" Value="36"/>
-        <Setter Property="FontSize" Value="{ThemeResource ControlContentThemeFontSize}" />
         <Setter Property="Foreground" Value="{StaticResource DarkColorBrush}"/>
         <Setter Property="UseSystemFocusVisuals" Value="True" />
     </Style>
@@ -129,5 +126,43 @@
     <Style TargetType="ListView" x:Key="TransactionsListViewStyle">
         <Setter Property="SelectionMode" Value="None"/>
         <Setter Property="IsItemClickEnabled" Value="True"/>
+    </Style>
+
+
+    <Style TargetType="FontIcon" x:Key="StatisticsFontIconStyle">
+        <Setter Property="Glyph" Value="{StaticResource StatisticsIcon}"/>
+        <Setter Property="Foreground" Value="{StaticResource DarkColorBrush}"/>
+    </Style>
+    <Style TargetType="StackPanel" x:Key="StatisticsStackPanelStyle">
+        <Setter Property="Margin" Value="0,8,0,0"/>
+    </Style>
+    <Style TargetType="Grid" x:Key="StatisticsItemGridStyle">
+        <Setter Property="Width" Value="86"/>
+        <Setter Property="Height" Value="76"/>
+        <Setter Property="Margin" Value="0,0,24,0"/>
+    </Style>
+    <Style TargetType="Border" x:Key="StatisticsItemLabelBorderStyle">
+        <Setter Property="Width" Value="52"/>
+        <Setter Property="Height" Value="52"/>
+        <Setter Property="VerticalAlignment" Value="Top"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="BorderThickness" Value="1"/>
+        <Setter Property="BorderBrush" Value="{StaticResource DarkGrayColorBrush}"/>
+        <Setter Property="CornerRadius" Value="26"/>
+    </Style>
+    <Style TargetType="TextBlock" x:Key="StatisticsItemContentTextBlockStyle">
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="Foreground" Value="{StaticResource DarkColorBrush}"/>
+    </Style>
+    <Style TargetType="TextBlock" x:Key="StatisticsItemHeaderTextBlockStyle">
+        <Setter Property="VerticalAlignment" Value="Bottom"/>
+        <Setter Property="HorizontalAlignment" Value="Center"/>
+        <Setter Property="Foreground" Value="{StaticResource DarkColorBrush}"/>
+    </Style>
+    <Style TargetType="TextBlock" x:Key="DefaultBlockHeaderTextBlockStyle">
+        <Setter Property="Margin" Value="4,0,0,0"/>
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="Foreground" Value="{StaticResource DarkColorBrush}"/>
     </Style>
 </ResourceDictionary>
