--- a/MoneySplitter.Win10/Styles/Views/HomeViewStyle.xaml
+++ b/MoneySplitter.Win10/Styles/Views/HomeViewStyle.xaml
@@ -1,6 +1,5 @@
-﻿<ResourceDictionary
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style TargetType="Grid" x:Key="RootGridStyle">
         <Setter Property="VerticalAlignment" Value="Stretch"/>
         <Setter Property="HorizontalAlignment" Value="Stretch"/>
@@ -171,6 +170,9 @@
         <Setter Property="TextWrapping" Value="Wrap"/>
         <Setter Property="MaxLines" Value="2"/>
     </Style>
+    <Style TargetType="Button" x:Key="RemoveButtonStyle" BasedOn="{StaticResource DefaultButtonStyle}">
+        <Setter Property="VerticalAlignment" Value="Center"/>
+    </Style>
     <Style TargetType="FontIcon" x:Key="RemoveFontIconStyle">
         <Setter Property="Glyph" Value="{StaticResource RemoveNoteIcon}"/>
         <Setter Property="Foreground" Value="{StaticResource GrayColorBrush}"/>
@@ -184,6 +186,6 @@
         <Setter Property="VerticalAlignment" Value="Stretch"/>
         <Setter Property="HorizontalAlignment" Value="Stretch"/>
         <Setter Property="BorderThickness" Value="0,0,0,1"/>
-        <Setter Property="BorderBrush" Value="{StaticResource LightGrayColorBrush}"/> 
+        <Setter Property="BorderBrush" Value="{StaticResource LightGrayColorBrush}"/>
     </Style>
 </ResourceDictionary>
