--- a/MoneySplitter.Win10/CustomControls/DesktopUserContol.xaml
+++ b/MoneySplitter.Win10/CustomControls/DesktopUserContol.xaml
@@ -1,15 +1,14 @@
-﻿<UserControl
-    x:Class="MoneySplitter.Win10.CustomControls.DesktopUserContol"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:MoneySplitter.Win10.CustomControls"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:extensions="using:MoneySplitter.Win10.Extensions"
-    xmlns:converters="using:MoneySplitter.Win10.Converters"
-    mc:Ignorable="d"
-    d:DesignHeight="300"
-    d:DesignWidth="400">
+﻿<UserControl x:Class="MoneySplitter.Win10.CustomControls.DesktopUserContol"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:local="using:MoneySplitter.Win10.CustomControls"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:extensions="using:MoneySplitter.Win10.Extensions"
+             xmlns:converters="using:MoneySplitter.Win10.Converters"
+             mc:Ignorable="d"
+             d:DesignHeight="300"
+             d:DesignWidth="400">
     <UserControl.Resources>
         <converters:OppositeBoolToVisibilityConverter x:Key="OppositeBoolToVisibilityConverter"/>
         <Style TargetType="Grid" x:Key="DesktopUserGridStyle">
