--- a/MoneySplitter.Win10/CustomControls/ErrorDetailsControl.xaml
+++ b/MoneySplitter.Win10/CustomControls/ErrorDetailsControl.xaml
@@ -1,16 +1,14 @@
-﻿<UserControl
-    x:Class="MoneySplitter.Win10.CustomControls.ErrorDetailsControl"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:MoneySplitter.Win10.CustomControls"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    d:DesignHeight="300"
-    d:DesignWidth="400">
+﻿<UserControl x:Class="MoneySplitter.Win10.CustomControls.ErrorDetailsControl"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"        
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             mc:Ignorable="d"
+             d:DesignHeight="300"
+             d:DesignWidth="400">
 
     <UserControl.Resources>
-        <Style TargetType="StackPanel" x:Key="IssueStackPanelStyle">
+        <Style TargetType="StackPanel" x:Key="ErrorStackPanelStyle">
             <Setter Property="Background" Value="{StaticResource ErrorBackgroundColor}"/>
             <Setter Property="VerticalAlignment" Value="Top"/>
             <Setter Property="HorizontalAlignment" Value="Stretch"/>
@@ -27,7 +25,7 @@
         </Style>
     </UserControl.Resources>
     
-    <StackPanel Style="{StaticResource IssueStackPanelStyle}"
+    <StackPanel Style="{StaticResource ErrorStackPanelStyle}"
                 Visibility="{x:Bind IsErrorVisable, Mode=OneWay}">
         <TextBlock Text="{x:Bind ErrorDetails. ErrorTitle, Mode=OneWay}"
                    Style="{StaticResource ErrorTitleTextBlockStyle}"/>
