--- a/MoneySplitter.Win10/CustomControls/MobileUserControl.xaml
+++ b/MoneySplitter.Win10/CustomControls/MobileUserControl.xaml
@@ -1,15 +1,11 @@
-﻿<UserControl
-    x:Class="MoneySplitter.Win10.CustomControls.MobileUserControl"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:MoneySplitter.Win10.CustomControls"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:extensions="using:MoneySplitter.Win10.Extensions" 
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:converters="using:MoneySplitter.Win10.Converters"
-    mc:Ignorable="d"
-    d:DesignHeight="300"
-    d:DesignWidth="400">
+﻿<UserControl x:Class="MoneySplitter.Win10.CustomControls.MobileUserControl"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             mc:Ignorable="d"
+             d:DesignHeight="300"
+             d:DesignWidth="400">
     <UserControl.Resources>
         <Style TargetType="Button" x:Name="UserActionButtonStyle">
                         <Setter Property="Background" Value="Transparent" />
