--- a/MoneySplitter.Win10/CustomControls/UserDetailsControl.xaml
+++ b/MoneySplitter.Win10/CustomControls/UserDetailsControl.xaml
@@ -1,19 +1,20 @@
 ﻿<UserControl x:Class="MoneySplitter.Win10.CustomControls.UserDetailsControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="using:MoneySplitter.Win10.CustomControls"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:converters="using:MoneySplitter.Win10.Converters"
              xmlns:extensions="using:MoneySplitter.Win10.Extensions"
              mc:Ignorable="d"
              d:DesignHeight="300"
-             d:DesignWidth="400">        
+             d:DesignWidth="400">
     <UserControl.Resources>
-        <converters:BankCardConverter x:Key="BankCardConverter" />
-        <converters:PhoneNumberConverter x:Key="PhoneNumberConverter" />
         <Style TargetType="StackPanel" x:Name="UserInformationStackPanelStyle">
             <Setter Property="VerticalAlignment" Value="Center"/>
+        </Style>
+        <Style TargetType="Ellipse" x:Key="UserImageEllipseStyle">
+            <Setter Property="Width" Value="100"/>
+            <Setter Property="Height" Value="100"/>
+            <Setter Property="Margin" Value="5"/>
         </Style>
     </UserControl.Resources>
 
@@ -22,8 +23,7 @@
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <Ellipse Width="100" Height="100"
-                  Margin="5">
+        <Ellipse Style="{StaticResource UserImageEllipseStyle}">
             <Ellipse.Fill>
                 <ImageBrush ImageSource="{x:Bind ViewModel.ImageUrl, Mode=OneWay}"
                             Stretch="UniformToFill"/>
